// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitationCounts renders  component with a mock record metrics 1`] = `
<div
  className="citationCounts columns is-multiline is-gapless is-marginless"
>
  <CitationCountView
    count={null}
    link="https://scholar.google.com/scholar?q=intitle:[id]Reducing%20preventable%20health%20disadvantage%20for%20people%20with%20disabilities%20through%20physical%20activity%20promotion"
    source="google"
    title="Link to Reducing preventable health disadvantage for people with disabilities through physical activity promotion (Google scholar) will open in a new window."
  />
</div>
`;

exports[`CitationCounts renders  component with all metrics 1`] = `
<div
  className="citationCounts columns is-multiline is-gapless is-marginless"
>
  <CitationCountView
    count={1}
    link="http://ezproxy.library.uq.edu.au/login?url=http://gateway.isiknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcApp=resolve1&DestLinkType=FullRecord&DestApp=WOS_CPL&KeyUT=12345&SrcAuth=uqueensland"
    source="wos"
    title="Link to undefined (Web of science) will open in a new window."
  />
  <CitationCountView
    count={1}
    link="http://ezproxy.library.uq.edu.au/login?url=http://www.scopus.com/record/display.url?eid=12345&origin=inward"
    source="scopus"
    title="Link to undefined (Scopus) will open in a new window."
  />
  <CitationCountView
    count={1}
    link="http://www.altmetric.com/details.php?citation_id=12345"
    source="altmetric"
    title="Link to undefined (Altmetric) will open in a new window."
  />
  <CitationCountView
    count={1}
    link="https://scholar.google.com/scholar?q=intitle:[id]undefined"
    source="google"
    title="Link to undefined (Google scholar) will open in a new window."
  />
  <span
    className="citationCount"
  >
    <div
      className="fez-icon openAccess large"
      title="Open Access - DOI - Free to read (embargo date might apply)"
    />
  </span>
  <div
    className="citationCount column"
  >
    <div
      className="columns is-mobile is-gapless"
    >
      <div
        className="column is-narrow citationCountNumber"
      >
        <ExternalLink
          className="externalLink"
          href="https://app.library.uq.edu.au/#/authors/view/pid:111"
          openInNewIcon={true}
          rel="noopener noreferrer"
          target="_blank"
        >
          View full statistics
        </ExternalLink>
      </div>
    </div>
  </div>
</div>
`;

exports[`CitationCounts renders  component with all metrics under embargo date 1`] = `
<div
  className="citationCounts columns is-multiline is-gapless is-marginless"
>
  <CitationCountView
    count={1}
    link="http://ezproxy.library.uq.edu.au/login?url=http://gateway.isiknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcApp=resolve1&DestLinkType=FullRecord&DestApp=WOS_CPL&KeyUT=12345&SrcAuth=uqueensland"
    source="wos"
    title="Link to undefined (Web of science) will open in a new window."
  />
  <CitationCountView
    count={1}
    link="http://ezproxy.library.uq.edu.au/login?url=http://www.scopus.com/record/display.url?eid=12345&origin=inward"
    source="scopus"
    title="Link to undefined (Scopus) will open in a new window."
  />
  <CitationCountView
    count={1}
    link="http://www.altmetric.com/details.php?citation_id=12345"
    source="altmetric"
    title="Link to undefined (Altmetric) will open in a new window."
  />
  <CitationCountView
    count={1}
    link="https://scholar.google.com/scholar?q=intitle:[id]undefined"
    source="google"
    title="Link to undefined (Google scholar) will open in a new window."
  />
  <span
    className="citationCount"
  >
    <div
      className="fez-icon openAccessLocked large"
      title="Open Access - DOI - Embargoed until 20th September 2022"
    />
  </span>
  <div
    className="citationCount column"
  >
    <div
      className="columns is-mobile is-gapless"
    >
      <div
        className="column is-narrow citationCountNumber"
      >
        <ExternalLink
          className="externalLink"
          href="https://app.library.uq.edu.au/#/authors/view/pid:111"
          openInNewIcon={true}
          rel="noopener noreferrer"
          target="_blank"
        >
          View full statistics
        </ExternalLink>
      </div>
    </div>
  </div>
</div>
`;

exports[`CitationCounts renders  component with no metrics 1`] = `
<div
  className="citationCounts columns is-multiline is-gapless is-marginless"
/>
`;

exports[`CitationCounts renders  component with non rendering oa status 1`] = `
<div
  className="citationCounts columns is-multiline is-gapless is-marginless"
>
  <CitationCountView
    count={1}
    link="http://ezproxy.library.uq.edu.au/login?url=http://gateway.isiknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcApp=resolve1&DestLinkType=FullRecord&DestApp=WOS_CPL&KeyUT=12345&SrcAuth=uqueensland"
    source="wos"
    title="Link to undefined (Web of science) will open in a new window."
  />
  <CitationCountView
    count={1}
    link="http://ezproxy.library.uq.edu.au/login?url=http://www.scopus.com/record/display.url?eid=12345&origin=inward"
    source="scopus"
    title="Link to undefined (Scopus) will open in a new window."
  />
  <CitationCountView
    count={1}
    link="http://www.altmetric.com/details.php?citation_id=12345"
    source="altmetric"
    title="Link to undefined (Altmetric) will open in a new window."
  />
  <CitationCountView
    count={1}
    link="https://scholar.google.com/scholar?q=intitle:[id]undefined"
    source="google"
    title="Link to undefined (Google scholar) will open in a new window."
  />
  <span
    className="citationCount"
  >
    <div
      className="fez-icon openAccess large"
      title="Open Access - Not Open Access - Free to read (embargo date might apply)"
    />
  </span>
  <div
    className="citationCount column"
  >
    <div
      className="columns is-mobile is-gapless"
    >
      <div
        className="column is-narrow citationCountNumber"
      >
        <ExternalLink
          className="externalLink"
          href="https://app.library.uq.edu.au/#/authors/view/pid:111"
          openInNewIcon={true}
          rel="noopener noreferrer"
          target="_blank"
        >
          View full statistics
        </ExternalLink>
      </div>
    </div>
  </div>
</div>
`;
